--- a/Extra/WebGPUParticles/index.html
+++ b/Extra/WebGPUParticles/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>WebGPU</title><script defer="defer" src="bundle.js"></script></head><body><canvas id="webgpu-canvas" width="960" height="540"></canvas></body></html>
+<!doctype html><html style="width: 100%; height: 100%; margin:0%;"><head><title>WebGPU</title><script defer="defer" src="bundle.js"></script></head><body style="width: 100%; height: 100%;margin:0%; overflow: hidden;"><canvas id="webgpu-canvas" width="16" height="16"></canvas></body></html>
