--- a/Extra/JekyllPlugins/GLTFViewer/index.html
+++ b/Extra/JekyllPlugins/GLTFViewer/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer src="mesh_compressed.glb" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="1">
+    <model-viewer ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" shadow-intensity="1" autoplay id="model">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
       </div>
@@ -20,6 +20,17 @@
           <img src="ar_hand_prompt.png">
       </div>
     </model-viewer>  
+
+    <script>
+      const urlParams = new URLSearchParams(window.location.search);
+      const modelName = urlParams.get("modelname");
+      if(modelName === null)
+      {
+        modelName = "mesh_compressed.glb";    
+      }
+      let model = document.getElementById("model");
+      model["src"] = modelName;
+    </script>
     <script src="script.js"></script>
     <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
