--- a/Extra/JekyllPlugins/GLTFViewer/index.html
+++ b/Extra/JekyllPlugins/GLTFViewer/index.html
@@ -9,15 +9,9 @@
   </head>
   <body>
     <!-- <model-viewer> HTML element -->
-    <model-viewer ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" shadow-intensity="1" autoplay id="model">
+    <model-viewer ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" shadow-intensity="1" autoplay id="model" style="background-color: unset;">
       <div class="progress-bar hide" slot="progress-bar">
           <div class="update-bar"></div>
-      </div>
-      <button slot="ar-button" id="ar-button">
-          View in your space
-      </button>
-      <div id="ar-prompt">
-          <img src="ar_hand_prompt.png">
       </div>
     </model-viewer>  
 
