Updated to cachebust (hopefully)

--- a/Extra/ThreeJS/index.html
+++ b/Extra/ThreeJS/index.html
@@ -1,2 +1,2 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><title>ThreeJS & TypeScript</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;}
-            canvas {display: block;}</style><script defer="defer" src="bundle.js"></script></head><body><canvas id="app"></canvas><script src="dist/main.js"></script><p>HELLO :)</p></body></html>
+            canvas {display: block;}</style><script defer="defer" src="bundle.095b196033747cff687c.js"></script></head><body><canvas id="app"></canvas><script src="dist/main.js"></script><p>HELLO :)</p></body></html>
