--- a/Extra/ThreeJS/index.html
+++ b/Extra/ThreeJS/index.html
@@ -1,2 +1,2 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>ThreeJS & TypeScript</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;}
-            canvas {display: block;}</style><script defer="defer" src="bundle.7e0f1e3c97fc41ebd1e7.js"></script></head><body><canvas id="app"></canvas><script src="dist/main.js"></script><p>HELLO :)</p></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><title>ThreeJS Sandbox</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;}
+            canvas {display: block;}</style><script defer="defer" src="bundle.2d6e29801bb4cd0eac73.js"></script></head><body><canvas id="app" style="width:100%;height:100%;"></canvas><script src="dist/main.js"></script></body></html>
