--- a/Extra/ThreeJS/index.html
+++ b/Extra/ThreeJS/index.html
@@ -1,2 +1,2 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><title>ThreeJS Sandbox</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;}
-            canvas {display: block;}</style><script defer="defer" src="bundle.6c47e3b030437c6866ab.js"></script></head><body style="cursor : pointer;"><canvas id="app" style="width:100%;height:100%;"></canvas><script src="dist/main.js"></script></body></html>
+            canvas {display: block;}</style><script defer="defer" src="bundle.6c47e3b030437c6866ab.js"></script></head><body style="cursor : pointer;background-color: black;"><canvas id="app" style="width:100%;height:100%;"></canvas><script src="dist/main.js"></script></body></html>
