Updated to recieve all pointer events

--- a/Extra/ThreeJS/index.html
+++ b/Extra/ThreeJS/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><title>ThreeJS Sandbox</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;}
             canvas {display: block;}</style><script defer="defer" src="bundle.b289c6dfe74a0125db61.js"></script></head><body>
                 <canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas>
-            <div style="position:absolute; min-width: 100%; min-height:100%; top:0px; background-color: blue;">a</div>
+            <div style="position:absolute; min-width: 100%; min-height:100%; top:0px; background-color: orange; pointer-events: all;">a</div>
             <script src="dist/main.js"></script></body></html>
