Attemtpted to change where the iframe's content hooks are

--- a/Extra/ThreeJS/index.html
+++ b/Extra/ThreeJS/index.html
@@ -1,5 +1,2 @@
 <!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><title>ThreeJS Sandbox</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;}
-            canvas {display: block;}</style><script defer="defer" src="bundle.b289c6dfe74a0125db61.js"></script></head><body>
-                <canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas>
-            <input type="checkbox" style="position:absolute; min-width: 100%; min-height:100%; top:0px; background-color: green; cursor:pointer"></input>
-            <script src="dist/main.js"></script></body></html>
+            canvas {display: block;}</style><script defer="defer" src="bundle.44b595b85d2407810609.js"></script></head><body><canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas><script src="dist/main.js"></script></body></html>
