--- a/Extra/ThreeJS/index.html
+++ b/Extra/ThreeJS/index.html
@@ -1,2 +1,2 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><title>ThreeJS Sandbox</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;}
-            canvas {display: block;}</style><script defer="defer" src="bundle.9de547641ea07b2ac9dd.js"></script></head><body><canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas><script src="dist/main.js"></script></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><title>ThreeJS Sandbox</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;overflow: hidden;}
+            canvas {display: block;}</style><script defer="defer" src="bundle.936cb5572e0edde379ca.js"></script></head><body><canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas></body></html>
