--- a/Extra/ThreeJS/index.html
+++ b/Extra/ThreeJS/index.html
@@ -1,2 +1,6 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><title>ThreeJS Sandbox</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;overflow: hidden;}
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><title>ThreeJS Sandbox</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;overflow: hidden; user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;}
             canvas {display: block;}</style><script defer="defer" src="bundle.62bb0c36933565a576eb.js"></script></head><body style="cursor : pointer;"><canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas></body></html>
