Fixed minor bug caysing incorrect highlighting behaviour

--- a/Extra/ThreeJS/index.html
+++ b/Extra/ThreeJS/index.html
@@ -11,7 +11,7 @@ html, body, canvas
     -moz-user-select: none;
     -o-user-select: none;
 }
-canvas {display: block;}
+canvas {display: block;  touch-action: none;}
 
 ::selection {
   background-color: #352e7e;
@@ -41,4 +41,4 @@ canvas {display: block;}
   color: #fff;
 }
 </style>
-            <script defer="defer" src="bundle.62bb0c36933565a576eb.js"></script></head><body style="cursor : pointer;"><canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas></body></html>
+            <script defer="defer" src="bundle.62bb0c36933565a576eb.js"></script></head><body><canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas></body></html>
