Finished new post about uv distortion

--- a/Extra/ThreeJS/index.html
+++ b/Extra/ThreeJS/index.html
@@ -1,44 +1,2 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><title>ThreeJS Sandbox</title>
-  <style>
-  html, body, canvas 
-  {
-      margin: 0;
-      padding: 0;
-      border: 0;overflow: 
-      hidden; user-select: none;
-      -webkit-user-select: none;
-      -ms-user-select: none;
-      -moz-user-select: none;
-      -o-user-select: none;
-  }
-  canvas {display: block;  touch-action: none;}
-  
-  ::selection {
-    background-color: #352e7e;
-    color: #fff;
-  }
-  
-  /*** Mozilla based browsers ***/
-  ::-moz-selection {
-    background-color: #352e7e;
-    color: #fff;
-  }
-  
-  /***For Other Browsers ***/
-  ::-o-selection {
-    background-color: #352e7e;
-    color: #fff;
-  }
-  
-  ::-ms-selection {
-    background-color: #352e7e;
-    color: #fff;
-  }
-  
-  /*** For Webkit ***/
-  ::-webkit-selection {
-    background-color: #352e7e;
-    color: #fff;
-  }
-  </style>
-              <script defer="defer" src="bundle.62bb0c36933565a576eb.js"></script></head><body><canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas></body></html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1"><title>ThreeJS Sandbox</title><style>html, body, canvas {margin: 0;padding: 0;border: 0;overflow: hidden;}
+            canvas {display: block;}</style><script defer="defer" src="bundle.df214cc369ca957e1849.js"></script></head><body><canvas id="app" style="width:100%;height:100%;touch-action: none;"></canvas></body></html>
